About page and style.css added

--- a/dashboard stuff/About.html
+++ b/dashboard stuff/About.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dashboard</title>
+        <title>About</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="sidebar">
             <img src="AfroSec Analytics.png" alt="AfroSec Logo">
 
-            <a href="Dashboard.html" class="active"><i>🏠</i>Dashboard</a>
-            <a href="About.html"><i>🗂️</i>About</a>
+            <a href="Dashboard.html" ><i>🏠</i>Dashboard</a>
+            <a href="#" class="active"><i>🗂️</i>About</a>
             <a href="#"><i>👥</i>Employees</a>
             <a href="#"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
@@ -18,7 +18,7 @@
     
         <div class="main">
             <div class="topbar">
-                <div style="font-size: 18px; font-weight: bold;">Dashboard</div>
+                <div style="font-size: 18px; font-weight: bold;">About</div>
                 <div class="user">
                     <input type="text" placeholder="search">
                     <span>Hi, User!</span>
@@ -26,9 +26,15 @@
                 </div>
             </div>
             <div class="content">
-                <img src="AfroSec Analytics.png" alt="AfroSec Analytics">
-                <h1 style="font-size: 36px;">AfroSec Analytics</h1>
-                <p style="font-size: 18px;">2025 Senior Project II</p>
+                <div class="vision">
+                    <h1>Vision</h1>
+                    <p>some text</p>
+                </div>
+                <div class="mission">    
+                    <h1>Mission</h1>
+                    <p>some text</p>
+                </div>    
+                
             </div>
         </div>
     </body>
