Services.html Completed

--- a/dashboard stuff/Services.html
+++ b/dashboard stuff/Services.html
@@ -9,16 +9,16 @@
             <img src="AfroSec Analytics.png" alt="AfroSec Logo">
 
             <a href="Dashboard.html" ><i>🏠</i>Dashboard</a>
-            <a href="#" class="active"><i>🗂️</i>About</a>
+            <a href="About.html"><i>🗂️</i>About</a>
             <a href="#"><i>👥</i>Employees</a>
-            <a href="Services.html"><i>Ⓢ</i>Services</a>
+            <a href="Services.html" class="active"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
             <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
         </div>
     
         <div class="main">
             <div class="topbar">
-                <div style="font-size: 18px; font-weight: bold;">About</div>
+                <div style="font-size: 18px; font-weight: bold;">Services</div>
                 <div class="user">
                     <input type="text" placeholder="search">
                     <span>Hi, User!</span>
@@ -26,15 +26,6 @@
                 </div>
             </div>
             <div class="content">
-                <div class="vision">
-                    <h1>Vision</h1>
-                    <p>some text</p>
-                </div>
-                <div class="mission">    
-                    <h1>Mission</h1>
-                    <p>some text</p>
-                </div>    
-                
             </div>
         </div>
     </body>
