Employees.html created

--- a/dashboard stuff/Employees.html
+++ b/dashboard stuff/Employees.html
@@ -10,15 +10,15 @@
 
             <a href="Dashboard.html" ><i>🏠</i>Dashboard</a>
             <a href="About.html"><i>🗂️</i>About</a>
-            <a href="Employees.html"><i>👥</i>Employees</a>
-            <a href="Services.html" class="active"><i>Ⓢ</i>Services</a>
+            <a href="Employees.html" class="active"><i>👥</i>Employees</a>
+            <a href="Services.html"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
             <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
         </div>
     
         <div class="main">
             <div class="topbar">
-                <div style="font-size: 18px; font-weight: bold;">Services</div>
+                <div style="font-size: 18px; font-weight: bold;">Employees</div>
                 <div class="user">
                     <input type="text" placeholder="search">
                     <span>Hi, User!</span>
