--- a/dashboard stuff/About.html
+++ b/dashboard stuff/About.html
@@ -9,8 +9,8 @@
             <img src="AfroSec Analytics.png" alt="AfroSec Logo">
 
             <a href="Dashboard.html" ><i>🏠</i>Dashboard</a>
-            <a href="#" class="active"><i>🗂️</i>About</a>
-            <a href="#"><i>👥</i>Employees</a>
+            <a href="About.html" class="active"><i>🗂️</i>About</a>
+            <a href="Employees.html"><i>👥</i>Employees</a>
             <a href="Services.html"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
             <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
