--- a/dashboard stuff/dashboard.html
+++ b/dashboard stuff/dashboard.html
@@ -10,7 +10,7 @@
 
             <a href="Dashboard.html" class="active"><i>🏠</i>Dashboard</a>
             <a href="About.html"><i>🗂️</i>About</a>
-            <a href="#"><i>👥</i>Employees</a>
+            <a href="Employees.html"><i>👥</i>Employees</a>
             <a href="Services.html"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
             <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
