Employees.html completed

--- a/dashboard stuff/Employees.html
+++ b/dashboard stuff/Employees.html
@@ -26,6 +26,30 @@
                 </div>
             </div>
             <div class="content">
+                <div class="row">
+                    <div class="employee">
+                        <div class="image-placeholder">Image 1</div>
+                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                    </div>
+                    <div class="employee">
+                        <div class="image-placeholder">Image 2</div>
+                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                    </div>
+                    <div class="employee">
+                        <div class="image-placeholder">Image 3</div>
+                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="employee">
+                        <div class="image-placeholder">Image 4</div>
+                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                    </div>
+                    <div class="employee">
+                        <div class="image-placeholder">Image 5</div>
+                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
