formatting and pictures completed

--- a/dashboard stuff/About.html
+++ b/dashboard stuff/About.html
@@ -8,33 +8,52 @@
         <div class="sidebar">
             <img src="AfroSec Analytics.png" alt="AfroSec Logo">
 
-            <a href="Dashboard.html" ><i>🏠</i>Dashboard</a>
+            <a href="Dashboard.html"><i>🏠</i>Dashboard</a>
             <a href="About.html" class="active"><i>🗂️</i>About</a>
             <a href="Employees.html"><i>👥</i>Employees</a>
             <a href="Services.html"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
-            <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
+            <a href="#" style="position: absolute; bottom: 5%"><i>↩️</i>Log Out</a>
         </div>
-    
         <div class="main">
             <div class="topbar">
                 <div style="font-size: 18px; font-weight: bold;">About</div>
                 <div class="user">
-                    <input type="text" placeholder="search">
                     <span>Hi, User!</span>
-                    <a href="#"><img src="#" alt="user"></a>
                 </div>
             </div>
             <div class="content">
                 <div class="vision">
-                    <h1>Vision</h1>
-                    <p>some text</p>
+                    <h1 style="font-size: 42px;">Vision</h1>
+                </div>
+                <div class="text">
+                    <p>SentinelPay exists to revolutionize financial security by providing an AI-driven fraud detection system that proactively identifies 
+                        fraudulent activities in real-time. The financial sector faces growing threats from increasingly sophisticated fraud schemes, while 
+                        traditional rule-based detection systems struggle with adaptability, leading to high false positives and missed anomalies. SentinelPay 
+                        addresses these challenges by leveraging machine learning to enhance fraud detection accuracy, safeguard customer transactions, and provide 
+                        actionable insights without compromising speed. By empowering financial institutions with advanced, scalable, and cost-efficient fraud prevention 
+                        tools, SentinelPay strengthens trust, reduces financial losses, and ensures long-term adaptability.</p>
                 </div>
                 <div class="mission">    
-                    <h1>Mission</h1>
-                    <p>some text</p>
+                    <h1 style="font-size: 42px;">Mission</h1>
+                </div>
+                <div class="text">    
+                    <p>SentinelPay is an AI-powered fraud detection system designed to analyze financial transactions in real-time. By leveraging machine learning anomaly detection techniques, SentinelPay classifies transactions into two categories: fraudulent or not fraudulent. The system integrates seamlessly with banking systems via a REST API and deploys efficiently using Docker to ensure scalability. A lightweight web interface is included to allow users to visualize flagged transactions and system performance metrics.
+
+                    The objective of our project is to develop a highly accurate machine learning model for fraud detection, integrating SentinelPay with a simulated banking system via a REST API. We will ensure scalability using Docker to handle high transaction volumes, build a web interface for visualizing flagged transactions and performance metrics, and conduct rigorous testing to validate model reliability and effectiveness.
+                    </p>
                 </div>    
-                
+
+                <div class="deliverables" style="padding-top: 50px;">
+                    <h1>Project deliverables</h1>
+                    <ul>
+                        <li>Fully functional SentinelPay prototype with core fraud detection capabilities.</li>
+                        <li>REST API integration with the simulated banking system.</li>
+                        <li>Dockerized deployment environment ensures scalability.</li>
+                        <li>A basic web interface for fraud alert visualization and system performance tracking.</li>
+                        <li>Comprehensive documentation outlining system architecture, model performance, and deployment processes.</li>
+                        </ul>
+                </div>
             </div>
         </div>
     </body>
