--- a/dashboard stuff/Employees.html
+++ b/dashboard stuff/Employees.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About</title>
+        <title>Employees</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -20,34 +20,32 @@
             <div class="topbar">
                 <div style="font-size: 18px; font-weight: bold;">Employees</div>
                 <div class="user">
-                    <input type="text" placeholder="search">
                     <span>Hi, User!</span>
-                    <a href="#"><img src="#" alt="user"></a>
                 </div>
             </div>
             <div class="content">
                 <div class="row">
                     <div class="employee">
-                        <div class="image-placeholder">Image 1</div>
-                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                        <img src="EM Headshot 1.jpeg">
+                        <div class="info">Emanie Montgomery<br>Senior<br>Computer Science</div>
                     </div>
                     <div class="employee">
-                        <div class="image-placeholder">Image 2</div>
-                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                        <img src="BB Headshot.jpg">
+                        <div class="info">Brendan Bryan<br>Senior<br>Computer Science</div>
                     </div>
                     <div class="employee">
-                        <div class="image-placeholder">Image 3</div>
-                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                        <img src="BF Headshot.jpg">
+                        <div class="info">Brian Ford<br>Senior<br>Computer Science</div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="employee">
-                        <div class="image-placeholder">Image 4</div>
-                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                        <img src="NA Headshot.png">
+                        <div class="info">Nyle Austin<br>Senior<br>Computer Science</div>
                     </div>
                     <div class="employee">
-                        <div class="image-placeholder">Image 5</div>
-                        <div class="info">Name<br>Senior<br>Computer Science</div>
+                        <img src="DG headshot.jpeg">
+                        <div class="info">Danny Grandison<br>Senior<br>Computer Science</div>
                     </div>
                 </div>
             </div>
