--- a/dashboard stuff/dashboard.html
+++ b/dashboard stuff/dashboard.html
@@ -13,22 +13,19 @@
             <a href="Employees.html"><i>👥</i>Employees</a>
             <a href="Services.html"><i>Ⓢ</i>Services</a>
             <a href="#"><i>🔔</i>SentinelPay</a>
-            <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
+            <a href="#" style="position: absolute; bottom: 5%"><i>↩️</i>Log Out</a>
         </div>
     
         <div class="main">
             <div class="topbar">
                 <div style="font-size: 18px; font-weight: bold;">Dashboard</div>
                 <div class="user">
-                    <input type="text" placeholder="search">
                     <span>Hi, User!</span>
-                    <a href="#"><img src="#" alt="user"></a>
                 </div>
             </div>
             <div class="content">
-                <img src="AfroSec Analytics.png" alt="AfroSec Analytics">
-                <h1 style="font-size: 36px;">AfroSec Analytics</h1>
-                <p style="font-size: 18px;">2025 Senior Project II</p>
+                <img style="padding-right: 10px;" src="AfroSec Analytics.png" alt="AfroSec Analytics">
+                <img src="Team Name .png" alt="Team Name">
             </div>
         </div>
     </body>
