--- a/dashboard stuff/About.html
+++ b/dashboard stuff/About.html
@@ -12,7 +12,7 @@
             <a href="About.html" class="active"><i>🗂️</i>About</a>
             <a href="Employees.html"><i>👥</i>Employees</a>
             <a href="Services.html"><i>Ⓢ</i>Services</a>
-            <a href="#"><i>🔔</i>SentinelPay</a>
+            <a href="http://127.0.0.1:8000/"><i>🔔</i>SentinelPay</a>
             <a href="#" style="position: absolute; bottom: 5%"><i>↩️</i>Log Out</a>
         </div>
         <div class="main">
