--- a/Website/dashboard stuff/Services.html
+++ b/Website/dashboard stuff/Services.html
@@ -38,6 +38,31 @@
                 </div>
             </div>
             <div class="content">
+                <div class="vision">
+                    <h1 style="font-size: 42px;">What Is SentinelPay?</h1>
+                </div>
+                <div class="text">
+                    <p>SentinelPay by AfroSec Analytics is an AI-powered fraud detection system that analyzes financial transactions in real-time. Unlike traditional rule-based methods, SentinelPay adapts dynamically to detect evolving fraud patterns using machine learning. It offers scalable, cost-effective protection by integrating via REST API and deploying with Docker. Through a user-friendly web interface, it delivers instant fraud alerts, data insights, and performance tracking.
+                    </p>
+                </div>
+                <div class="mission">    
+                    <h1 style="font-size: 42px;">The Importance of Anomaly Detection</h1>
+                </div>
+                <div class="text">    
+                    <p>Fraud tactics are growing more sophisticated—identity theft, synthetic accounts, phishing, and unauthorized transfers are just a few examples. Traditional fraud systems generate high false positives and lag behind emerging threats. Real-time anomaly detection empowers institutions to respond instantly, reducing financial losses and operational strain while protecting consumers.</p>
+                </div>    
+                <div class="deliverables">
+                    <h1 style="font-size: 42px;">How our Model Classifies Transaction Anomalies?</h1>
+                </div>
+                <div class="text">
+                    <h3>SentinelPay uses a three-layer architecture:</h2>
+                    <ul>
+                        <li><Span style="font-weight: bolder;">Preprocessing Layer</Span>: Cleans and prepares transaction data by encoding transaction types, scaling features, and removing irrelevant fields.</li>
+                        <li><Span style="font-weight: bolder;">Model Layer</span>: Trains and evaluates a DecisionTreeClassifier using labeled data to distinguish normal from fraudulent behavior.</li>
+                        <li><Span style="font-weight: bolder;">Interface Layer</Span>: Lets users upload transaction files, view model predictions, and monitor flagged anomalies via a responsive web dashboard.</li>
+                    </ul>
+                    <h3>Once the model processes the data, it predicts whether each transaction is fraudulent or not, triggering alerts and generating real-time insights for immediate action.</h2>
+                </div>
             </div>
         </div>
     </body>
