--- a/Website/dashboard stuff/Employees.html
+++ b/Website/dashboard stuff/Employees.html
@@ -27,7 +27,7 @@
                     });
             }
             </script>
-            <a href="#" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
+            <a href="login.html" style="position: absolute; bottom: 1%"><i>↩️</i>Log Out</a>
         </div>
     
         <div class="main">
