--- a/Website/dashboard stuff/About.html
+++ b/Website/dashboard stuff/About.html
@@ -27,7 +27,7 @@
                     });
             }
             </script>
-                        <a href="#" style="position: absolute; bottom: 5%"><i>↩️</i>Log Out</a>
+                        <a href="login.html" style="position: absolute; bottom: 5%"><i>↩️</i>Log Out</a>
         </div>
         <div class="main">
             <div class="topbar">
